fix(work): adjust alignment for improved layout on larger screens

--- a/components/sections/Work/index.scss
+++ b/components/sections/Work/index.scss
@@ -2,16 +2,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+
+  @media (max-width: 790px) {
+    justify-content: flex-start;
+  }
 
   &__title-container {
     display: flex;
     justify-content: flex-start;
     width: 80vw;
-    margin: 0;
 
     @media (max-width: 790px) {
       width: 90vw;
